@@ -1,44 +1,19 @@
-## Add additional metadata to easyTrade application via environment variable
+## Add additional metadata to easytrade application via environment variable
 
-- In your Bastion terminal, navigate to the following directory:​
-
-```bash
-   cd ~/deploy/easyTrade/manifests​
-   ```
-In this directory you will see deployment files associated with the easyTrade app, we are going to make a change to the file
- 
- - brokerservice.yaml
-
-The contents of brokerservice.yaml should look similiar to the following:
-
-![nanobrokerservice](../../assets/images/nanobrokerservice.png)
-
-
-Using nano, we’ll add some metadata to the brokerservice service via an Environment properties
-
-- To open the brokerservice.yaml file, we’ll type the following:​
+- In your Bastion terminal, let's apply the DT\_CUSTOM\_PROP changes to the pricingservice.yaml file:​
 
 ```bash
-   nano brokerservice.yaml​
+   sh ~/perform-2023-mastering-dynatrace-configuration/scripts/custom-prop.sh
    ```
+That script updated the pricingservice.yaml file, and added the DT\_CUSTOM\_PROP variable with a value of "Environment=Dev" in the env: section:
 
-- In the env section add the following:​
+![pricingservice](../../assets/images/pricingservicev2.png)
 
-```bash
-   env:
-   - name: JAVA_OPTS
-     value: -Xms128m -Xmx512m -XX:PermSize=128m -XX+UseG1GC -Djava.security.egd=file:/dev/urandom
-   - name: DT_CUSTOM_PROP
-     value: Environment=Dev​
-
-    After adding the above line, press "Ctrl+X" , press "Y" and press "Enter" to save​
-
-   ```
-
-We now need to apply the changes, so we need to trigger Kubernetes to stop our current container and start a new one with our Environment Variable added​
+We need to trigger Kubernetes to stop our current container and start a new one with our Environment Variable added​, this will push the changes to Dynatrace.
 
 - To apply the changes, execute:​
 
 ```bash
-    kubectl apply -f brokerservice.yaml​
+    cd ~/deploy/easytrade/manifests/
+    kubectl apply -f pricingservice.yaml
    ```
